applications/registry/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
  labels:
    app: registry
spec:
  ports:
  - port: 80
    targetPort: 5000
  clusterIP: None
  selector:
    app: registry
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: site
  annotations:
    # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropriate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
    # Allow big image chunks
    nginx.ingress.kubernetes.io/proxy-body-size: "4G"
spec:
  tls:
  - hosts:
      - registry.jlh.name
    secretName: registry-jlh-name-tls
  rules:
  - host: registry.jlh.name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: registry
            port:
              number: 80
